Fix spacing.

--- a/data/styles.css
+++ b/data/styles.css
@@ -260,7 +260,7 @@ a
 
 main.inner, main.expanded-inner, main .expanded-inner
 {
-    padding-top: 2.0rem;
+    padding-top: 1.0rem;
 }
 
 .spacer
